@@ -1,6 +1,11 @@
 $Id$
 ===============================================================
 
+228	Luke Howard <lukeh@padl.com>
+
+	* don't try to connect to server if we only want to
+	  read the configuration file
+
 227	Luke Howard <lukeh@padl.com>
 
 	* fix for BUG#183: support pw_change and pw_expire
